--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -34,7 +34,7 @@
 // Colors
 // ==========================================================================
 
-@primary-color: color("materialize-red", "lighten-2");
+@primary-color: extract(@materialize-red, lighten-2);
 @primary-color-light: lighten(@primary-color, 15%);
 @primary-color-dark: darken(@primary-color, 15%);
 
