--- a/form/forms.less
+++ b/form/forms.less
@@ -1,4 +1,4 @@
-@import "../assets/css/use.global.less";
+@import "../assets/css/use";
 // Remove Focus Boxes
 select:focus {
   outline: @select-focus;
@@ -14,10 +14,10 @@ label {
   color: @input-border-color;
 }
 
-@import '_input-fields.global.less';
-@import '_radio-buttons.global.less';
-@import '_checkboxes.global.less';
-@import '_switches.global.less';
-@import '_select.global.less';
-@import '_file-input.global.less';
-@import '_range.global.less';
+@import 'input-fields.less';
+@import 'radio-buttons.less';
+@import 'checkboxes.less';
+@import 'switches.less';
+@import 'select.less';
+@import 'file-input.less';
+@import 'range.less';
