--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -30,14 +30,47 @@
 // Progress Bar
 
 
+// Global
+// ==========================================================================
+
+// Teek Settings
+@teek-width: 400px;
+
+
+// Media Query Ranges - change or delete!
+@small-screen-up: 601px;
+@medium-screen-up: 993px;
+@large-screen-up: 1201px;
+@small-screen: 600px;
+@medium-screen: 992px;
+@large-screen: 1200px;
+
+@medium-and-up: "only screen and (min-width : @{@small-screen-up})";
+@large-and-up: "only screen and (min-width : @{@medium-screen-up})";
+@extra-large-and-up: "only screen and (min-width : @{@large-screen-up})";
+@small-and-down: "only screen and (max-width : @{@small-screen})";
+@medium-and-down: "only screen and (max-width : @{@medium-screen})";
+@medium-only: "only screen and (min-width : @{@small-screen-up}) and (max-width : @{@medium-screen})";
+
+
+// Grid
+// ==========================================================================
+
+@num-cols: 12;
+@gutter-width: 1.5rem;
+@element-top-margin: @gutter-width/3;
+@element-bottom-margin: (@gutter-width*2)/3;
+
+
+
 // Colors
 // ==========================================================================
 
-@primary-color: at(@materialize-red, lighten-2);
+@primary-color: at(@grey, base);
 @primary-color-light: lighten(@primary-color, 15%);
 @primary-color-dark: darken(@primary-color, 15%);
 
-@secondary-color: at(@teal, lighten-1);
+@secondary-color: at(@grey, darken-1);
 @success-color: at(@green, base);
 @error-color: at(@red, base);
 @link-color: at(@light-blue, darken-1);
@@ -67,7 +100,7 @@
 @button-disabled-color: #9F9F9F;
 
 // Raised buttons
-@button-raised-background: @secondary-color;
+@button-raised-background: @primary-color;
 @button-raised-background-hover: lighten(@button-raised-background, 5%);
 @button-raised-color: #fff;
 
@@ -76,7 +109,7 @@
 @button-large-height: @button-height * 1.5;
 
 // Flat buttons
-@button-flat-color: #343434;
+@button-flat-color: @primary-color;
 @button-flat-disabled-color: lighten(#999, 10%);
 
 // Floating buttons
@@ -91,11 +124,19 @@
 // Cards
 // ==========================================================================
 
-@card-padding: 8px;
+@card-padding: 16px;
 @card-padding-top: 8px;
+@card-text-color: rgba(0, 0, 0, .54);
 @card-bg-color: #fff;
 @card-link-color: at(@orange, accent-2);
 @card-link-color-light: lighten(@card-link-color, 20%);
+
+// Card Headers
+// ==========================================================================
+
+@card-header-line-height: 1.5rem;
+@card-header-title-color: rgba(0, 0, 0, .87);
+@card-header-subtitle-color: rgba(0, 0, 0, .54);
 
 
 // Collapsible
@@ -145,6 +186,7 @@
 // ==========================================================================
 
 @roboto-font-path: "../fonts/roboto/";
+@text-color-base: rgba(0,0,0, .87);;
 
 
 // Forms
@@ -195,33 +237,6 @@
 @switch-unchecked-lever-bg: #818181;
 @switch-radius: 15px;
 
-
-// Global
-// ==========================================================================
-
-// Media Query Ranges
-@small-screen-up: 601px;
-@medium-screen-up: 993px;
-@large-screen-up: 1201px;
-@small-screen: 600px;
-@medium-screen: 992px;
-@large-screen: 1200px;
-
-@medium-and-up: "only screen and (min-width : @{@small-screen-up})";
-@large-and-up: "only screen and (min-width : @{@medium-screen-up})";
-@extra-large-and-up: "only screen and (min-width : @{@large-screen-up})";
-@small-and-down: "only screen and (max-width : @{@small-screen})";
-@medium-and-down: "only screen and (max-width : @{@medium-screen})";
-@medium-only: "only screen and (min-width : @{@small-screen-up}) and (max-width : @{@medium-screen})";
-
-
-// Grid
-// ==========================================================================
-
-@num-cols: 12;
-@gutter-width: 1.5rem;
-@element-top-margin: @gutter-width/3;
-@element-bottom-margin: (@gutter-width*2)/3;
 
 
 // Navigation Bar
@@ -327,3 +342,7 @@
 // ==========================================================================
 
 @progress-bar-color: @secondary-color;
+
+// Blocks
+// ==========================================================================
+
