UI V1: Mid changes

--- a/assets/css/color.less
+++ b/assets/css/color.less
@@ -6,6 +6,14 @@
 
 // Google Color Palette defined http//www.google.com/design/spec/style/color.html
 
+@teek-core-colors:
+	font-base rgba(0,0,0, 1.0),
+	font-base-87 rgba(0,0,0, .87),
+	font-base-54 rgba(0,0,0, .54)
+;
+
+@text-color-base: rgba(0,0,0, .87);
+
 @materialize-red:
 	base #e51c23,
 	lighten-5 #fdeaeb,
