--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -89,7 +89,7 @@
 // Shared styles
 @button-border: none;
 @button-background-focus: lighten(@secondary-color, 4%);
-@button-font-size: 1rem;
+@button-font-size: 14px;
 @button-icon-font-size: 1.3rem;
 @button-height: 36px;
 @button-padding: 0 2rem;
@@ -186,8 +186,6 @@
 // ==========================================================================
 
 @roboto-font-path: "../fonts/roboto/";
-@text-color-base: rgba(0,0,0, .87);;
-
 
 // Forms
 // ==========================================================================
