--- a/documentation/preview/style.less
+++ b/documentation/preview/style.less
@@ -1,9 +1,39 @@
-.appWrapper {
+.pageWrapper {
 	margin: 0 auto;
-	width: 980px;
+	width: 100%;
 }
 
-.appBlock {
-	margin: 30px 0;
+.chapterHeader {
+	display: block;
+	margin: 0;
+	padding: 24px 50px;
 }
 
+.chapterTitle {
+	color: #00897b;
+}
+
+.articleBlock {
+	display: block;
+}
+
+.articleBlockLeft {
+	display: inline-block;
+	padding: 24px 50px;
+	width: 350px;
+	vertical-align: top;
+}
+
+.articleBlockCenter {
+	display: inline-block;
+	width:500px;
+	padding: 24px 50px;
+	vertical-align: top;
+}
+
+.articleBlockRight {
+	display: inline-block;
+	width:350px;
+	padding: 24px 50px;
+	vertical-align: top;
+}
