UIv1. Latest changes (DA).

--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -35,7 +35,7 @@
 
 // Teek Settings
 @teek-width: 400px;
-
+@divider-color: rgba(0,0,0, .12);
 
 // Media Query Ranges - change or delete!
 @small-screen-up: 601px;
