--- a/form/checkboxes.less
+++ b/form/checkboxes.less
@@ -1,4 +1,4 @@
-@import "../assets/css/use.global.less";
+@import "../assets/css/use";
 /* Checkboxes
    ========================================================================== */
 
