--- a/assets/css/use.less
+++ b/assets/css/use.less
@@ -31,3 +31,12 @@
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.3);
 }
 
+
+// Round corners for top and bottom elements
+.element-top {
+	border-radius: 2px 2px 0 0;
+}
+
+.element-bottom {
+	border-radius: 0 0 2px 2px;
+}
