--- a/form/input-fields.less
+++ b/form/input-fields.less
@@ -1,4 +1,4 @@
-@import "../assets/css/use.global.less";
+@import "../assets/css/use";
 /* Text Inputs + Textarea
    ========================================================================== */
 
@@ -126,6 +126,7 @@ textarea.materialize-textarea {
 // Styling for input field wrapper
 .input-field {
   // Inline styles
+  
   &.inline {
     display: inline-block;
     vertical-align: middle;
@@ -145,28 +146,30 @@ textarea.materialize-textarea {
 
     .prefix ~ label,
     .prefix ~ .validate ~ label {
-      width: calc(100% - 3rem - @{@gutter-width});
+      width: calc(100% - 3rem - @gutter-width);
     }
   }
 
   position: relative;
   margin-top: 1rem;
 
-  label {
-    color: @input-border-color;
-    position: absolute;
-    top: 0.8rem;
-    left: 0;
-    font-size: 1rem;
-    cursor: text;
-    transition: .2s ease-out;
-    text-align: initial;
-
-    &:not(.label-icon).active {
-      font-size: @label-font-size;
-      transform: translateY(-140%);
-    }
-  }
+	label {
+		color: @input-border-color;
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		font-size: 1rem;
+		cursor: text;
+		transition: .2s ease-out;
+		text-align: initial;
+		transform: translateY(12px);
+		pointer-events: none;
+		&:not(.label-icon).active {
+	      transform: translateY(-14px) scale(.8);
+	      transform-origin: 0 0;
+		}
+	}
 
   // Prefix Icons
   .prefix {
@@ -190,14 +193,14 @@ textarea.materialize-textarea {
 
   .prefix ~ label { margin-left: 3rem; }
 
-  @media @{@medium-and-down} {
+  @media @medium-and-down {
     .prefix ~ input {
       width: 86%;
       width: calc(100% - 3rem);
     }
   }
 
-  @media @{@small-and-down} {
+  @media @small-and-down {
     .prefix ~ input {
       width: 80%;
       width: calc(100% - 3rem);
