--- a/form/select.less
+++ b/form/select.less
@@ -1,6 +1,16 @@
-@import "../assets/css/use.global.less";
+@import "../assets/css/use";
 /* Select Field
    ========================================================================== */
+
+.select-lined {
+   width: 100%;
+   height: 40px;
+   background-color: #ccc;
+   padding: 5px;
+   border: 1px;
+   border-radius: 5px;
+}
+
 
 select { display: none; }
 select.browser-default { display: block; }
