Fix module link.

--- a/assets/css/use.less
+++ b/assets/css/use.less
@@ -1,4 +1,4 @@
-@import (reference) "../../node_modules/lesshat/lesshat.less";
+@import (reference) "~lesshat/lesshat.less";
 
 // Mixins
 @import (reference) "mixins";
