UIv1: changes by PepsiCo case 1

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -766,3 +766,12 @@ td, th {
 .no-padding {
 	padding: 0;
 }
+
+// Round corners for top and bottom elements
+.element-top {
+	border-radius: 2px 2px 0 0;
+}
+
+.element-bottom {
+	border-radius: 0 0 2px 2px;
+}
