--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -201,6 +201,7 @@
 @input-font-size: 1rem;
 @input-margin-bottom: 20px;
 @input-margin: 0 0 @input-margin-bottom 0;
+@input-select-margin: 0 0 0 0;
 @input-padding: 0;
 @input-transition: all .3s;
 @label-font-size: .8rem;
