--- a/form/select.less
+++ b/form/select.less
@@ -5,12 +5,10 @@
 .select-lined {
    width: 100%;
    height: 40px;
-   background-color: #ccc;
    padding: 5px;
    border: 1px;
    border-radius: 5px;
 }
-
 
 select { display: none; }
 select.browser-default { display: block; }
@@ -24,11 +22,7 @@ select {
   height: @input-height;
 }
 
-.select-label {
-  position: absolute;
-}
-
-.select-wrapper {
+.select-field {
   position: relative;
 
   input.select-dropdown {
@@ -42,7 +36,7 @@ select {
     line-height: @input-height;
     width: 100%;
     font-size: @input-font-size;
-    margin: @input-margin;
+    margin: @input-select-margin;
     padding: 0;
     display: block;
   }
@@ -63,11 +57,6 @@ select {
     }
   }
 
-  & + label {
-    position: absolute;
-    top: -14px;
-    font-size: @label-font-size;
-  }
 }
 
 // Disabled styles
@@ -75,7 +64,7 @@ select:disabled {
   color: rgba(0,0,0,.3);
 }
 
-.select-wrapper input.select-dropdown:disabled {
+.select-field input.select-dropdown:disabled {
   color: rgba(0,0,0,.3);
   cursor: default;
   -webkit-user-select: none; /* webkit (safari, chrome) browsers */
@@ -84,9 +73,21 @@ select:disabled {
   border-bottom: 1px solid rgba(0,0,0,.3);
 }
 
-.select-wrapper i {
+.select-field i {
   color: @select-disabled-color;
 }
+
+.select-dropdown {
+   background-color: rgba(0,0,0,.1);
+   padding: 8px;
+   border: 1px;
+   border-radius: 0 0 2px 2px;
+	li {
+	   margin: 0;
+	   padding: 8px;
+	}
+}
+
 
 .select-dropdown li.disabled,
 .select-dropdown li.disabled > span,
@@ -96,7 +97,7 @@ select:disabled {
 }
 
 // Prefix Icons
-.prefix ~ .select-wrapper {
+.prefix ~ .select-field {
   margin-left: 3rem;
   width: 92%;
   width: calc(100% - 3rem);
