UI v1: PepsiCo Updtaes 2

--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -92,7 +92,7 @@
 @button-font-size: 14px;
 @button-icon-font-size: 1.3rem;
 @button-height: 36px;
-@button-padding: 0 2rem;
+@button-padding: 0 16px;
 @button-radius: 2px;
 
 // Disabled styles
