--- a/documentation/preview/lib.less
+++ b/documentation/preview/lib.less
@@ -290,13 +290,18 @@ ul.side-nav.fixed ul.collapsible-accordion a.collapsible-header {
 	padding: 0 30px
 }
 
-ul.side-nav.fixed ul.collapsible-accordion .collapsible-body li a {
+ul.side-nav.fixed ul.collapsible-accordion .inner li a {
 	font-weight: 400;
 	padding: 0 37.5px 0 45px;
 }
 
 ul.side-nav.fixed:hover {
 	overflow-y: auto
+}
+
+.side-nav .inner>ul>li a.active, .side-nav.fixed .inner>ul>li a.active {
+	background-color: #ee6e73;
+	color: #fff;
 }
 
 
