--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -71,7 +71,7 @@ html {
 	font-weight: 400;
 	line-height: 1.1;
 	color: at(@teek-core-colors, font-base-87);
-	margin: 0 0 5px 0;
+	margin: 5px 0 4px 0;
 }
 
 .subheading-gray {
@@ -168,7 +168,7 @@ h6 {
 p {
 	font-size:14px;
 	font-weight: 300;
-	line-height: 1.1;
+	line-height: 1.5;
 	color: at(@teek-core-colors, font-base-87);
 	margin: (14px / 2) 0 (14px / 2.5) 0;
 }
