--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -44,12 +44,12 @@
 @medium-screen: 992px;
 @large-screen: 1200px;
 
-@medium-and-up: "only screen and (min-width : @{@small-screen-up})";
-@large-and-up: "only screen and (min-width : @{@medium-screen-up})";
-@extra-large-and-up: "only screen and (min-width : @{@large-screen-up})";
-@small-and-down: "only screen and (max-width : @{@small-screen})";
-@medium-and-down: "only screen and (max-width : @{@medium-screen})";
-@medium-only: "only screen and (min-width : @{@small-screen-up}) and (max-width : @{@medium-screen})";
+@medium-and-up: ~"only screen and (min-width : @{small-screen-up})";
+@large-and-up: ~"only screen and (min-width : @{medium-screen-up})";
+@extra-large-and-up: ~"only screen and (min-width : @{large-screen-up})";
+@small-and-down: ~"only screen and (max-width : @{small-screen})";
+@medium-and-down: ~"only screen and (max-width : @{medium-screen})";
+@medium-only: ~"only screen and (min-width : @{small-screen-up}) and (max-width : @{medium-screen})";
 
 
 // Grid
