--- a/documentation/preview/style.less
+++ b/documentation/preview/style.less
@@ -44,6 +44,7 @@
 		width: 382px;
 		padding: 5px;
 		margin: 0 40px 0 0;
+		flex-shrink: 0;
 	}
 
 	.previewCode {
@@ -59,4 +60,20 @@
 pre[class*=language-] {
 	overflow: auto;
 	width: 100%;
+}
+
+.dynamic-color .red,.dynamic-color .pink,.dynamic-color .purple,.dynamic-color .deep-purple,.dynamic-color .indigo,.dynamic-color .blue,.dynamic-color .light-blue,.dynamic-color .cyan,.dynamic-color .teal,.dynamic-color .green,.dynamic-color .light-green,.dynamic-color .lime,.dynamic-color .yellow,.dynamic-color .amber,.dynamic-color .orange,.dynamic-color .deep-orange,.dynamic-color .brown,.dynamic-color .grey,.dynamic-color .blue-grey,.dynamic-color .black,.dynamic-color .white,.dynamic-color .transparent {
+  height: 55px;
+  width: 100%;
+  padding: 0 15px;
+  line-height: 55px;
+  font-weight: 500;
+  font-size: 12px;
+  display: block;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box
+}
+
+.dynamic-color .col {
+  margin-bottom: 55px
 }
