--- a/card/style.less
+++ b/card/style.less
@@ -20,7 +20,7 @@
 	.card-header {
 		padding: @card-padding;
 	}
-	
+
 	.card-action-header {
 		padding: @card-padding;
 	}
@@ -36,7 +36,7 @@
          overflow: hidden;
          left: 15px;
          display: inline-block;
-         vertical-align: middle;			
+         vertical-align: middle;
 			border-radius: 50%;
 			background-color: #ccc;
 		}
@@ -53,7 +53,7 @@
          overflow: hidden;
          left: 15px;
          display: inline-block;
-         vertical-align: middle;			
+         vertical-align: middle;
 			background-color: #ccc;
 		}
 	}
@@ -95,6 +95,24 @@
 
 			i {
 				line-height: 32px;
+			}
+		}
+
+		hr {
+			border: 0;
+			border-top: 1px solid rgba(160,160,160,.2);
+			height: 0px;
+			background: none;
+			overflow: hidden;
+			display: block;
+			clear: both;
+			box-sizing: content-box;
+			width: 100%;
+			margin: 15px ~'-@{card-padding}';
+			padding: 0 @card-padding;
+
+			&:first-child, &:last-child {
+				display: none;
 			}
 		}
 	}
