--- a/card/style.less
+++ b/card/style.less
@@ -136,4 +136,33 @@
 		}
 	}
 
+	.card-title {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+
+		.material-icons {
+			flex-grow: 0;
+			flex-shrink: 1;
+			margin-right: 5px;
+		}
+
+		.title-left {
+			flex-grow: 1;
+		}
+
+		.title-right {
+			padding-left: 15px;
+		}
+
+		&.has-sideTitle {
+			.title-left {
+				font-weight: bold;
+			}
+		}
+
+
+	}
+
 }
