--- a/documentation/preview/style.less
+++ b/documentation/preview/style.less
@@ -77,3 +77,14 @@ pre[class*=language-] {
 .dynamic-color .col {
   margin-bottom: 55px
 }
+
+ul.side-nav.fixed ul.collapsible-accordion .inner li ul li a {
+	font-weight: 400;
+	padding: 0 57.5px 0 65px;
+	color: #999;
+}
+
+ul.side-nav.fixed ul.collapsible-accordion .inner li ul li a.active {
+	background-color: #ff9e80 ;
+	color: #fff;
+}
