--- a/assets/css/transitions.less
+++ b/assets/css/transitions.less
@@ -11,3 +11,7 @@
 
   transition: transform .3s cubic-bezier(0.53, 0.01, 0.36, 1.63);
 }
+
+.transition-base {
+	transition: all .3s cubic-bezier(0.53, 0.01, 0.36, 1.63);
+}
