--- a/blocks/snackbar/style.less
+++ b/blocks/snackbar/style.less
@@ -1,5 +1,38 @@
 @import "../../assets/css/use";
 
 .snackbar {
+	padding-left: @card-padding;
+	padding-right: @card-padding;
+	display: flex;
+	width: 100%;
+	position: fixed;
+	justify-content: center;
+	align-items: flex-end;
+	left: 0;
+	.transition-base;
+	bottom: -100px;
 
+	&.snackbar-open {
+		bottom: 0;
+	}
 }
+
+	.snackbar-inner {
+		max-width: 500px;
+		width: 100%;
+		padding: @card-padding;
+		background: at(@cyan, base);
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		color: #fff;
+
+		a {
+			color: #fff;
+		}
+	}
+
+	.snackbar-close {
+		margin-left: 5px;
+	}
+
