--- a/blocks/bonuses/style.less
+++ b/blocks/bonuses/style.less
@@ -1,6 +1,6 @@
 @import "../../assets/css/use";
 
-.product-block-small {
+.bonus-block-small {
 	padding: @card-padding;
 	display: flex;
 	flex-direction: row;
@@ -8,17 +8,13 @@
 	align-items: center;
 	flex-wrap: nowrap;
 
-	.product-block__image {
-		max-width: 100px;
-		max-height: 100px;
-		overflow: hidden;
-		margin-right: 15px;
-		align-self: center;
+	.bonus-block-small-counter {
+		min-width: 100px;
+		margin: 0 15px 0 15px;
+		border-right: 1px solid @primary-color;
 	}
 
-	.product-block__text {
-		align-self: flex-start;
-		flex-grow: 1;
+	.bonus-block-small-action {
 	}
 
 }
