UXUI: Text Notification Update

--- a/blocks/notifications/style.less
+++ b/blocks/notifications/style.less
@@ -7,7 +7,7 @@
 	background-color: @card-notification-bg-color;
 	border-radius: 2px 2px 0 0;
 	.message {
-		margin: @card-padding;
+		margin: 10px @card-padding 10px @card-padding;
 		color: @card-notification-text-color;
 		font-size: 12px;
 		font-weight: 500;
