--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -127,8 +127,8 @@
 @card-padding-top: 8px;
 @card-text-color: rgba(0, 0, 0, .54);
 @card-bg-color: #fff;
-@card-notification-bg-color: at(@red, lighten-5);
-@card-notification-text-color: at(@red, base);
+@card-notification-bg-color: at(@grey, darken-1);
+@card-notification-text-color: white;
 @card-link-color: at(@orange, accent-2);
 @card-link-color-light: lighten(@card-link-color, 20%);
 
