BLOCKS: New Product Regular Block

--- a/blocks/products/style.less
+++ b/blocks/products/style.less
@@ -23,4 +23,16 @@
 
 }
 
+.product-block-regular {
+
+	.product-block__image {
+		border-radius: 2px 2px 0 0;
+
+		img {
+			border-radius: 2px 2px 0 0;
+		}
+	}
+
+}
+
 
