--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -85,7 +85,7 @@ html {
 .body-2 {
 	font-size:14px;
 	font-weight: 500;
-	line-height: 1.1;
+	line-height: 1.3;
 	color: at(@teek-core-colors, font-base-87);
 	margin: (14px / 2) 0 (14px / 2.5) 0;
 }
@@ -93,9 +93,16 @@ html {
 .body-1 {
 	font-size:14px;
 	font-weight: 400;
-	line-height: 1.1;
+	line-height: 1.3;
 	color: at(@teek-core-colors, font-base-87);
 	margin: (14px / 2) 0 (14px / 2.5) 0;
+}
+
+.info {
+	font-size:12px;
+	font-weight: 400;
+	line-height: 1.5;
+	color: at(@teek-core-colors, font-base-54);
 }
 
 .caption {
@@ -167,7 +174,7 @@ h6 {
 
 p {
 	font-size:14px;
-	font-weight: 300;
+	font-weight: 400;
 	line-height: 1.5;
 	color: at(@teek-core-colors, font-base-87);
 	margin: (14px / 2) 0 (14px / 2.5) 0;
