Header with Image on Top + style for rounded corners on top

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -766,3 +766,11 @@ td, th {
 .no-padding {
 	padding: 0;
 }
+
+.top_block {
+	border-radius: 2px 2px 0 0;
+	img {
+		border-radius: 2px 2px 0 0;
+	}
+}
+
