Add loader to Card.

--- a/card/style.less
+++ b/card/style.less
@@ -178,4 +178,21 @@
 
 	}
 
+	.card-preloader {
+		background: rgba(255, 255, 255, 0.6);
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		z-index: 10;
+	}
+
+	.card-preloader__color {
+		border-color: @progress-bar-color;
+	}
+
 }
