--- a/blocks/bonuses/style.less
+++ b/blocks/bonuses/style.less
@@ -9,7 +9,8 @@
 	flex-wrap: nowrap;
 
 	.bonus-block-small-counter {
-		min-width: 100px;
+		min-width: 50px;
+		max-width: 150px;
 		margin: 0 15px 0 15px;
 		border-right: 1px solid @primary-color;
 	}
