--- a/blocks/tabs/style.less
+++ b/blocks/tabs/style.less
@@ -55,7 +55,6 @@
 			}
 
 			color: fade(@tabs-text-color, .7);
-			display: block;
 			width: 100%;
 			height: 100%;
 			padding: 0 24px;
@@ -63,6 +62,14 @@
 			text-overflow: ellipsis;
 			overflow: hidden;
 			transition: color .28s ease;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			display: flex;
+
+			.material-icons {
+				margin-right: 5px;
+			}
 		}
 
 		&.disabled a,
