--- a/card/style.less
+++ b/card/style.less
@@ -148,6 +148,14 @@
 				color: @card-link-color-light;
 			}
 		}
+
+		.btn {
+			margin-right: 20px;
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
 	}
 
 	.card-title {
@@ -193,12 +201,6 @@
 
 	.card-preloader__color {
 		border-color: @progress-bar-color;
-	}
-
-	.card-action {
-		.btn {
-			margin-right: 10px;
-		}
 	}
 
 }
