+iPhone form size fix, phoneInput update

--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -199,7 +199,7 @@
 @input-error-color: @error-color;
 @input-success-color: @success-color;
 @input-focus-color: @secondary-color;
-@input-font-size: 1rem;
+@input-font-size: 16px;
 @input-margin-bottom: 20px;
 @input-margin: 0 0 @input-margin-bottom 0;
 @input-select-margin: 0 0 0 0;
