UXUI Card bottom marging change

--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -58,7 +58,8 @@
 @num-cols: 12;
 @gutter-width: 1.5rem;
 @element-top-margin: @gutter-width/3;
-@element-bottom-margin: (@gutter-width*2)/3;
+@element-bottom-margin: (@gutter-width)/3;
+//@element-bottom-margin: (@gutter-width*2)/3;
 
 
 
