--- a/blocks/snackbar/style.less
+++ b/blocks/snackbar/style.less
@@ -4,6 +4,7 @@
 	padding-left: @card-padding;
 	padding-right: @card-padding;
 	display: flex;
+	z-index: 5;
 	width: 100%;
 	position: fixed;
 	justify-content: center;
