--- a/form/checkboxes.less
+++ b/form/checkboxes.less
@@ -76,17 +76,26 @@ form p:last-child {
 
 [type="checkbox"]:checked {
   + label:before {
-    top: -4px;
-    left: -5px;
-    width: 12px;
-    height: 22px;
-    border-top: 2px solid transparent;
-    border-left: 2px solid transparent;
-    border-right: @radio-border;
-    border-bottom: @radio-border;
-    transform: rotate(40deg);
+    top: 0px;
+    left: 0px;
+    width: 18px;
+    height: 18px;
+    border: 2px solid @radio-fill-color;
+	// transform: rotate(180deg);
     backface-visibility: hidden;
     transform-origin: 100% 100%;
+    background-color: @radio-fill-color;
+    // top: -4px;
+    // left: -5px;
+    // width: 12px;
+    // height: 22px;
+    // border-top: 2px solid transparent;
+    // border-left: 2px solid transparent;
+    // border-right: @radio-border;
+    // border-bottom: @radio-border;
+    // transform: rotate(40deg);
+    // backface-visibility: hidden;
+    // transform-origin: 100% 100%;
   }
 
   &:disabled + label:before {
