--- a/assets/css/navbar.less
+++ b/assets/css/navbar.less
@@ -16,7 +16,8 @@ nav {
 	}
 
 	color: @navbar-font-color;
-	.z-depth-1;
+	.z-depth-0;
+	border-radius: 2px 2px 0 0;
 	background-color: @primary-color;
 	width: 100%;
 	height: @navbar-height-mobile;
