--- a/assets/css/collapsible.less
+++ b/assets/css/collapsible.less
@@ -2,8 +2,7 @@ collapsible {
   border-top: 1px solid #ddd;
   border-right: 1px solid #ddd;
   border-left: 1px solid #ddd;
-  margin: $element-top-margin 0 $element-bottom-margin 0;
-  @extend .z-depth-1;
+  margin: 0;
 }
 
 .collapsible-header {
